--- a/.github/actions/setup_toolchain/download/action.yml
+++ b/.github/actions/setup_toolchain/download/action.yml
@@ -1,9 +1,12 @@
 name: Download Toolchain
 
 inputs:
-  toolchain_url:
+  toolchain:
+    description: 'Toolchain name'
     required: true
-    type: string
+  toolchain_url:
+    description: 'Toolchain URL'
+    required: true
 
 runs:
   using: "composite"
@@ -12,18 +15,18 @@ runs:
       uses: actions/cache@v4
       id: cache-toolchain
       with:
-        path: ~/cache/toolchain
-        key: ${{ runner.os }}-${{ inputs.toolchain_url }}
+        path: ~/cache/${{ inputs.toolchain }}
+        key: ${{ runner.os }}-${{ inputs.toolchain }}-${{ inputs.toolchain_url }}
 
     - name: Install Toolchain
       if: steps.cache-toolchain.outputs.cache-hit != 'true'
       run: |
-        mkdir -p ~/cache/toolchain
+        mkdir -p ~/cache/${{ inputs.toolchain }}
         wget --progress=dot:mega ${{ inputs.toolchain_url }} -O toolchain.tar.gz
-        tar -C ~/cache/toolchain -xaf toolchain.tar.gz
+        tar -C ~/cache/${{ inputs.toolchain }} -xaf toolchain.tar.gz
       shell: bash
 
     - name: Set Toolchain Path
       run: |
-        echo >> $GITHUB_PATH `echo ~/cache/toolchain/*/bin`
+        echo >> $GITHUB_PATH `echo ~/cache/${{ inputs.toolchain }}/*/bin`
       shell: bash
