--- a/.github/actions/setup_toolchain/espressif/action.yml
+++ b/.github/actions/setup_toolchain/espressif/action.yml
@@ -5,7 +5,7 @@ inputs:
     description: 'Toolchain name'
     required: true
   toolchain_url:
-    description: 'Toolchain URL'
+    description: 'Toolchain URL or version'
     required: true
 
 runs:
@@ -16,20 +16,20 @@ runs:
 
     - name: Cache Docker Image
       uses: actions/cache@v4
-      id: cache-toolchain-${{ inputs.toolchain }}
+      id: cache-toolchain-espressif
       with:
         path: $DOCKER_IMAGE
         key: ${{ runner.os }}-${{ inputs.toolchain }}-${{ inputs.toolchain_url }}
 
     - name: Pull and Save Docker Image
-      if: steps.cache-toolchain-${{ inputs.toolchain }}.outputs.cache-hit != 'true'
+      if: steps.cache-toolchain-espressif.outputs.cache-hit != 'true'
       run: |
         docker pull espressif/idf:${{ inputs.toolchain_url }}
         docker save espressif/idf:${{ inputs.toolchain_url }} > $DOCKER_IMAGE
       shell: bash
 
     - name: Load Docker Image
-      if: steps.cache-toolchain.outputs.cache-hit == 'true'
+      if: steps.cache-toolchain-espressif.outputs.cache-hit == 'true'
       run: |
         docker load < $DOCKER_IMAGE
       shell: bash
