--- a/.github/actions/setup_toolchain/espressif/action.yml
+++ b/.github/actions/setup_toolchain/espressif/action.yml
@@ -25,6 +25,7 @@ runs:
       if: steps.cache-toolchain-espressif.outputs.cache-hit != 'true'
       run: |
         docker pull espressif/idf:${{ inputs.toolchain_url }}
+        mkdir -p ~/cache/${{ inputs.toolchain }}
         docker save espressif/idf:${{ inputs.toolchain_url }} > $DOCKER_IMAGE
       shell: bash
 
