--- a/.github/actions/setup_toolchain/espressif/action.yml
+++ b/.github/actions/setup_toolchain/espressif/action.yml
@@ -34,6 +34,6 @@ runs:
         docker pull espressif/idf:${{ inputs.toolchain_url }}
         mkdir -p ~/cache/${{ inputs.toolchain }}
         tree ~/cache
-        docker save espressif/idf:${{ inputs.toolchain_url }} > $DOCKER_IMAGE
+        docker save -o $DOCKER_IMAGE espressif/idf:${{ inputs.toolchain_url }} || exit 1
         tree ~/cache
       shell: bash
