--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -65,8 +65,8 @@ jobs:
           - 'aarch64-gcc'
           #- 'arm-clang'
           #- 'arm-gcc'
-          - 'msp430-gcc'
-          - 'riscv-gcc'
+#          - 'msp430-gcc'
+#          - 'riscv-gcc'
     with:
       build-system: 'cmake'
       toolchain: ${{ matrix.toolchain }}
@@ -86,8 +86,8 @@ jobs:
           - 'aarch64-gcc'
           #- 'arm-clang'
           #- 'arm-gcc'
-          - 'msp430-gcc'
-          - 'riscv-gcc'
+#          - 'msp430-gcc'
+#          - 'riscv-gcc'
     with:
       build-system: 'make'
       toolchain: ${{ matrix.toolchain }}
