--- a/.github/actions/setup_toolchain/espressif/action.yml
+++ b/.github/actions/setup_toolchain/espressif/action.yml
@@ -18,7 +18,7 @@ runs:
       uses: actions/cache@v4
       id: cache-toolchain-espressif
       with:
-        path: $${ env.DOCKER_IMAGE }}
+        path: $HOME/cache/${{ inputs.toolchain }}
         key: ${{ runner.os }}-${{ inputs.toolchain }}-${{ inputs.toolchain_url }}
 
     - name: Load Docker Image
