--- a/.github/actions/setup_toolchain/espressif/action.yml
+++ b/.github/actions/setup_toolchain/espressif/action.yml
@@ -11,22 +11,18 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - run: echo "DOCKER_IMAGE=$HOME/cache/${{ inputs.toolchain }}/docker_image.tar" >> $GITHUB_ENV
+    - id: set-docker-image
+      run: |
+        echo "DOCKER_IMAGE=$HOME/cache/${{ inputs.toolchain }}/docker_image.tar" >> $GITHUB_ENV
+        echo "DOCKER_IMAGE=$HOME/cache/${{ inputs.toolchain }}/docker_image.tar" >> $GITHUB_OUTPUT
       shell: bash
 
     - name: Cache Docker Image
       uses: actions/cache@v4
       id: cache-toolchain-espressif
       with:
-        path: ~/cache/${{ inputs.toolchain }}
+        path: ${{ steps.set-docker-image.outputs.DOCKER_IMAGE }}
         key: ${{ runner.os }}-${{ inputs.toolchain }}-${{ inputs.toolchain_url }}
-
-    - name: Load Docker Image
-      if: steps.cache-toolchain-espressif.outputs.cache-hit == 'true'
-      run: |
-        du -sh $DOCKER_IMAGE
-        docker load --input $DOCKER_IMAGE
-      shell: bash
 
     - name: Pull and Save Docker Image
       if: steps.cache-toolchain-espressif.outputs.cache-hit != 'true'
@@ -35,4 +31,11 @@ runs:
         mkdir -p ~/cache/${{ inputs.toolchain }}
         docker save -o $DOCKER_IMAGE espressif/idf:${{ inputs.toolchain_url }}
         du -sh $DOCKER_IMAGE
+      shell: bash
+
+    - name: Load Docker Image
+      if: steps.cache-toolchain-espressif.outputs.cache-hit == 'true'
+      run: |
+        du -sh $DOCKER_IMAGE
+        docker load --input $DOCKER_IMAGE
       shell: bash
