--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -77,6 +77,7 @@ jobs:
   # Build Make
   # ---------------------------------------
   make:
+    if: github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/master')
     needs: set-matrix
     uses: ./.github/workflows/build_util.yml
     strategy:
