--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ on:
       - 'tools/get_deps.py'
       - 'tools/build.py'
       - '.github/actions/**'
-      - '.github/workflows/build_cmake.yml'
+      - '.github/workflows/build.yml'
       - '.github/workflows/build_util.yml'
       - '.github/workflows/ci_set_matrix.py'
   pull_request:
@@ -24,7 +24,7 @@ on:
       - 'tools/get_deps.py'
       - 'tools/build.py'
       - '.github/actions/**'
-      - '.github/workflows/build_cmake.yml'
+      - '.github/workflows/build.yml'
       - '.github/workflows/build_util.yml'
       - '.github/workflows/ci_set_matrix.py'
 concurrency:
