--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ on:
       - 'tools/get_deps.py'
       - 'tools/build.py'
       - '.github/actions/**'
-      - '.github/workflows/build_cmake.yml'
+      - '.github/workflows/build.yml'
       - '.github/workflows/build_util.yml'
       - '.github/workflows/ci_set_matrix.py'
   pull_request:
@@ -24,7 +24,7 @@ on:
       - 'tools/get_deps.py'
       - 'tools/build.py'
       - '.github/actions/**'
-      - '.github/workflows/build_cmake.yml'
+      - '.github/workflows/build.yml'
       - '.github/workflows/build_util.yml'
       - '.github/workflows/ci_set_matrix.py'
 concurrency:
@@ -67,6 +67,10 @@ jobs:
           - 'arm-gcc'
           - 'msp430-gcc'
           - 'riscv-gcc'
+    if: >-
+      matrix.toolchain != 'arm-clang' ||
+      github.event_name == 'pull_request' ||
+      (github.event_name == 'push' && github.ref == 'refs/heads/master')
     with:
       build-system: 'cmake'
       toolchain: ${{ matrix.toolchain }}
@@ -77,6 +81,9 @@ jobs:
   # Build Make
   # ---------------------------------------
   make:
+    if: >-
+      github.event_name == 'pull_request' ||
+      (github.event_name == 'push' && github.ref == 'refs/heads/master')
     needs: set-matrix
     uses: ./.github/workflows/build_util.yml
     strategy:
