--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,7 +68,7 @@ jobs:
           - 'msp430-gcc'
           - 'riscv-gcc'
     if: >-
-      matrix.toolchain != 'arm-clang' ||
+      ${{ matrix.toolchain }} != 'arm-clang' ||
       github.event_name == 'pull_request' ||
       (github.event_name == 'push' && github.ref == 'refs/heads/master')
     with:
@@ -134,3 +134,34 @@ jobs:
       toolchain: 'esp-idf'
       toolchain_url: 'v5.1.1'
       build-args: '["-b${{ matrix.board }}"]'
+
+  # ---------------------------------------
+  # Build IAR on HFP self-hosted
+  # ---------------------------------------
+  arm-iar:
+    if: github.repository_owner == 'hathach'
+    runs-on: [self-hosted, Linux, X64, hifiphile]
+    env:
+      BUILD_ARGS: ${{ toJSON(fromJSON(needs.set-matrix.outputs.json)['arm-iar'].family) }}
+    steps:
+      - name: Clean workspace
+        run: |
+          echo "Cleaning up previous run"
+          rm -rf "${{ github.workspace }}"
+          mkdir -p "${{ github.workspace }}"
+
+      - name: Checkout TinyUSB
+        uses: actions/checkout@v4
+
+      - name: Get Dependencies
+        run: python3 tools/get_deps.py $BUILD_ARGS
+
+      - name: Build
+        run: python3 tools/build.py --toolchain iar $BUILD_ARGS
+
+      - name: Test on actual hardware (hardware in the loop)
+        if: >-
+          github.event_name == 'pull_request' ||
+          (github.event_name == 'push' && github.ref == 'refs/heads/master')
+        run: |
+          python3 test/hil/hil_test.py hfp.json
