--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,14 +63,13 @@ jobs:
       matrix:
         toolchain:
           - 'aarch64-gcc'
-          - 'arm-clang'
-          - 'arm-gcc'
+          #- 'arm-clang'
+          #- 'arm-gcc'
           - 'msp430-gcc'
           - 'riscv-gcc'
-    if: >-
-      ${{ matrix.toolchain }} != 'arm-clang' ||
-      github.event_name == 'pull_request' ||
-      (github.event_name == 'push' && github.ref == 'refs/heads/master')
+#    if: >-
+#      github.event_name == 'pull_request' ||
+#      (github.event_name == 'push' && github.ref == 'refs/heads/master')
     with:
       build-system: 'cmake'
       toolchain: ${{ matrix.toolchain }}
