--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -141,7 +141,7 @@ jobs:
     if: github.repository_owner == 'hathach'
     runs-on: [self-hosted, Linux, X64, hifiphile]
     env:
-      BUILD_ARGS:  ${{ fromJSON(needs.set-matrix.outputs.json)[arm-iar].toolchain_url }}
+      BUILD_ARGS:  ${{ fromJSON(needs.set-matrix.outputs.json)['arm-iar'].family }}
     steps:
       - name: Clean workspace
         run: |
