--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -120,6 +120,7 @@ jobs:
   # ---------------------------------------
   espressif:
     uses: ./.github/workflows/build_util.yml
+    if: false
     strategy:
       fail-fast: false
       matrix:
@@ -140,8 +141,8 @@ jobs:
   arm-iar:
     if: github.repository_owner == 'hathach'
     runs-on: [self-hosted, Linux, X64, hifiphile]
-    env:
-      BUILD_ARGS: ${{ fromJSON(needs.set-matrix.outputs.json)['arm-iar'].family }}
+    #env:
+      #BUILD_ARGS: ${{ fromJSON(needs.set-matrix.outputs.json)['arm-iar'].family }}
     steps:
       - name: Clean workspace
         run: |
@@ -152,15 +153,24 @@ jobs:
       - name: Checkout TinyUSB
         uses: actions/checkout@v4
 
-      - name: Get Dependencies
-        run: python3 tools/get_deps.py $BUILD_ARGS
+      - run: |
+          echo "1"
+          echo ${{ fromJSON(needs.set-matrix.outputs.json) }}
+          echo "2"
+          echo ${{ fromJSON(needs.set-matrix.outputs.json)['arm-iar'] }}
+          echo "3"
+          echo ${{ fromJSON(needs.set-matrix.outputs.json)['arm-iar'].family }}
 
-      - name: Build
-        run: python3 tools/build.py --toolchain iar $BUILD_ARGS
 
-      - name: Test on actual hardware (hardware in the loop)
-        if: >-
-          github.event_name == 'pull_request' ||
-          (github.event_name == 'push' && github.ref == 'refs/heads/master')
-        run: |
-          python3 test/hil/hil_test.py hfp.json
+#      - name: Get Dependencies
+#        run: python3 tools/get_deps.py $BUILD_ARGS
+#
+#      - name: Build
+#        run: python3 tools/build.py --toolchain iar $BUILD_ARGS
+#
+#      - name: Test on actual hardware (hardware in the loop)
+#        if: >-
+#          github.event_name == 'pull_request' ||
+#          (github.event_name == 'push' && github.ref == 'refs/heads/master')
+#        run: |
+#          python3 test/hil/hil_test.py hfp.json
