--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -139,10 +139,11 @@ jobs:
   # Build IAR on HFP self-hosted
   # ---------------------------------------
   arm-iar:
+    needs: set-matrix
     if: github.repository_owner == 'hathach'
     runs-on: [self-hosted, Linux, X64, hifiphile]
-    #env:
-      #BUILD_ARGS: ${{ fromJSON(needs.set-matrix.outputs.json)['arm-iar'].family }}
+    env:
+      BUILD_ARGS: ${{ fromJSON(needs.set-matrix.outputs.json)['arm-iar'].family }}
     steps:
       - name: Clean workspace
         run: |
