--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -148,7 +148,7 @@ jobs:
         toolchain:
           - 'arm-iar'
     env:
-      BUILD_ARGS: ${{ fromJSON(needs.set-matrix.outputs.json)[matrix.toolchain].family }}
+      BUILD_ARGS: "${{ fromJSON(needs.set-matrix.outputs.json)[matrix.toolchain].family }}"
     steps:
       - name: Clean workspace
         run: |
