--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,15 +72,13 @@ jobs:
       toolchain: ${{ matrix.toolchain }}
       toolchain_url: ${{ fromJSON(needs.set-matrix.outputs.json)[matrix.toolchain].toolchain_url }}
       build-args: ${{ toJSON(fromJSON(needs.set-matrix.outputs.json)[matrix.toolchain].family) }}
-      one-per-family: ${{ github.event_name == 'push' }}
+      one-per-family: ${{ github.event_name != 'pull_request' }}
 
   # ---------------------------------------
   # Build Make
   # ---------------------------------------
   make:
-    if: >-
-      github.event_name == 'pull_request' ||
-      (github.event_name == 'push' && github.ref == 'refs/heads/master')
+    #if: github.event_name == 'pull_request'
     needs: set-matrix
     uses: ./.github/workflows/build_util.yml
     strategy:
@@ -97,6 +95,7 @@ jobs:
       toolchain: ${{ matrix.toolchain }}
       toolchain_url: ${{ fromJSON(needs.set-matrix.outputs.json)[matrix.toolchain].toolchain_url }}
       build-args: ${{ toJSON(fromJSON(needs.set-matrix.outputs.json)[matrix.toolchain].family) }}
+      one-per-family: ${{ github.event_name != 'pull_request' }}
 
   # ---------------------------------------
   # Build Make on Windows/MacOS
@@ -111,7 +110,8 @@ jobs:
       os: ${{ matrix.os }}
       build-system: 'make'
       toolchain: 'arm-gcc'
-      build-args: '["-bstm32f411disco"]'
+      build-args: '["stm32h7"]'
+      one-per-family: true
 
   # ---------------------------------------
   # Build Espressif
@@ -156,11 +156,9 @@ jobs:
         run: python3 tools/get_deps.py $BUILD_ARGS
 
       - name: Build
-        run: python3 tools/build.py --one_per_family --toolchain iar $BUILD_ARGS
+        run: python3 tools/build.py --one-per-family --toolchain iar $BUILD_ARGS
 
       - name: Test on actual hardware (hardware in the loop)
-        if: >-
-          github.event_name == 'pull_request' ||
-          (github.event_name == 'push' && github.ref == 'refs/heads/master')
+        if: github.event_name == 'pull_request'
         run: |
           python3 test/hil/hil_test.py hfp.json
