--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,11 +37,6 @@ jobs:
     outputs:
       json: ${{ steps.set-matrix-json.outputs.matrix }}
     steps:
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.x'
-
       - name: Checkout TinyUSB
         uses: actions/checkout@v4
 
@@ -63,27 +58,22 @@ jobs:
       matrix:
         toolchain:
           - 'aarch64-gcc'
-          - 'arm-clang'
+#          - 'arm-clang'
           - 'arm-gcc'
           - 'msp430-gcc'
           - 'riscv-gcc'
-    if: >-
-      matrix.toolchain != 'arm-clang' ||
-      github.event_name == 'pull_request' ||
-      (github.event_name == 'push' && github.ref == 'refs/heads/master')
     with:
       build-system: 'cmake'
       toolchain: ${{ matrix.toolchain }}
       toolchain_url: ${{ fromJSON(needs.set-matrix.outputs.json)[matrix.toolchain].toolchain_url }}
       build-args: ${{ toJSON(fromJSON(needs.set-matrix.outputs.json)[matrix.toolchain].family) }}
+      one-per-family: ${{ github.event_name != 'pull_request' }}
 
   # ---------------------------------------
   # Build Make
   # ---------------------------------------
   make:
-    if: >-
-      github.event_name == 'pull_request' ||
-      (github.event_name == 'push' && github.ref == 'refs/heads/master')
+    #if: github.event_name == 'pull_request'
     needs: set-matrix
     uses: ./.github/workflows/build_util.yml
     strategy:
@@ -100,6 +90,7 @@ jobs:
       toolchain: ${{ matrix.toolchain }}
       toolchain_url: ${{ fromJSON(needs.set-matrix.outputs.json)[matrix.toolchain].toolchain_url }}
       build-args: ${{ toJSON(fromJSON(needs.set-matrix.outputs.json)[matrix.toolchain].family) }}
+      one-per-family: ${{ github.event_name != 'pull_request' }}
 
   # ---------------------------------------
   # Build Make on Windows/MacOS
@@ -114,7 +105,8 @@ jobs:
       os: ${{ matrix.os }}
       build-system: 'make'
       toolchain: 'arm-gcc'
-      build-args: '["-bstm32f411disco"]'
+      build-args: '["stm32h7"]'
+      one-per-family: true
 
   # ---------------------------------------
   # Build Espressif
@@ -134,3 +126,33 @@ jobs:
       toolchain: 'esp-idf'
       toolchain_url: 'v5.1.1'
       build-args: '["-b${{ matrix.board }}"]'
+
+  # ---------------------------------------
+  # Build IAR on HFP self-hosted
+  # ---------------------------------------
+  arm-iar:
+    if: github.repository_owner == 'hathach'
+    needs: set-matrix
+    runs-on: [self-hosted, Linux, X64, hifiphile]
+    env:
+      BUILD_ARGS: ${{ join(fromJSON(needs.set-matrix.outputs.json)['arm-iar'].family, ' ') }}
+    steps:
+      - name: Clean workspace
+        run: |
+          echo "Cleaning up previous run"
+          rm -rf "${{ github.workspace }}"
+          mkdir -p "${{ github.workspace }}"
+
+      - name: Checkout TinyUSB
+        uses: actions/checkout@v4
+
+      - name: Get Dependencies
+        run: python3 tools/get_deps.py $BUILD_ARGS
+
+      - name: Build
+        run: python3 tools/build.py --one-per-family --toolchain iar $BUILD_ARGS
+
+      - name: Test on actual hardware (hardware in the loop)
+        if: github.event_name == 'pull_request'
+        run: |
+          python3 test/hil/hil_test.py hfp.json
