--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,33 +1,39 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/jobs-steps/#jobs-overview & https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/docs/configuration-reference/#executor-job
+  arm-clang:
     docker:
-      # Specify the version you desire here
-      # See: https://circleci.com/developer/images/image/cimg/base
       - image: cimg/base:current
+    resource_class: small      
+    environment:
+      TOOLCHAIN_URL: https://github.com/ARM-software/LLVM-embedded-toolchain-for-Arm/releases/download/release-17.0.1/LLVMEmbeddedToolchainForArm-17.0.1-Linux-x86_64.tar.xz
 
-    resource_class: small
-
-    # Add steps to the job
-    # See: https://circleci.com/docs/jobs-steps/#steps-overview & https://circleci.com/docs/configuration-reference/#steps
     steps:
       # Checkout the code as the first step.
       - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: Install Toolchain
+          command: |
+            mkdir -p ~/cache/toolchain
+            wget --progress=dot:mega $TOOLCHAIN_URL -O toolchain.tar.gz
+            tar -C ~/cache/toolchain -xaf toolchain.tar.gz
+      - run:
+          name: Set Toolchain Path
+          command: echo `echo ~/cache/toolchain/*/bin`  >> $BASH_ENV
+      - run:
+          name: Get Dependencies
+          command: python tools/get_deps.py stm32f1
+      - run:
+          name: Build
+          command: python tools/build.py -s cmake --toolchain clang stm32f1
+ 
 
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  say-hello-workflow: # This is the name of the workflow, feel free to change it to better match your workflow.
+  build: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
     jobs:
-      - say-hello
+      - arm-clang
