--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,20 +7,19 @@ jobs:
     parameters:
       family:
         type: string
-      toolchain_url:
-        type: string
-
     docker:
       - image: cimg/base:current
     resource_class: medium
     environment:
+      TOOLCHAIN_URL: https://github.com/ARM-software/LLVM-embedded-toolchain-for-Arm/releases/download/release-17.0.1/LLVMEmbeddedToolchainForArm-17.0.1-Linux-x86_64.tar.xz
       NINJA_URL: https://github.com/ninja-build/ninja/releases/download/v1.12.1/ninja-linux.zip
 
     steps:
       - checkout
+      - run: echo $TOOLCHAIN_URL > toolchain_url.txt
       - restore_cache:
           name: Restore Toolchain Cache
-          key: toolchain-<< parameters.toolchain_url >>
+          key: toolchain-{{ checksum "toolchain_url.txt" }}
           paths:
             - ~/cache/toolchain
       - run:
@@ -29,12 +28,12 @@ jobs:
             # Only download if folder does not exist (not cached)
             if [ ! -d ~/cache/toolchain ]; then
               mkdir -p ~/cache/toolchain
-              wget << parameters.toolchain_url >> -O toolchain.tar.gz
+              wget $TOOLCHAIN_URL -O toolchain.tar.gz
               tar -C ~/cache/toolchain -xaf toolchain.tar.gz
             fi
       - save_cache:
           name: Save Toolchain Cache
-          key: "toolchain-<< parameters.toolchain_url >>"
+          key: toolchain-{{ checksum "toolchain_url.txt" }}
           paths:
             - ~/cache/toolchain
 
@@ -72,7 +71,5 @@ workflows:
       - arm-clang:
           matrix:
             parameters:
-              toolchain_url: 
-                - 'https://github.com/ARM-software/LLVM-embedded-toolchain-for-Arm/releases/download/release-17.0.1/LLVMEmbeddedToolchainForArm-17.0.1-Linux-x86_64.tar.xz'
               family: ['stm32f1']
 #              family: ['imxrt', 'kinetis_k kinetis_kl kinetis_k32l2', 'lpc11 lpc13 lpc15', 'lpc17 lpc18 lpc40 lpc43', 'lpc51 lpc54 lpc55', 'nrf', 'samd11 samd21 saml2x', 'samd5x_e5x samg', 'stm32f0 stm32f1 stm32f2 stm32f3', 'stm32f4', 'stm32f7', 'stm32g0 stm32g4 stm32h5', 'stm32h7', 'stm32l4 stm32u5 stm32wb']
