build with both cmake and make

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,9 @@ jobs:
     parameters:
       family:
         type: string
+      build-system:
+        type: string
+
     docker:
       - image: cimg/base:current
     resource_class: medium
@@ -53,7 +56,7 @@ jobs:
             unzip ninja-linux.zip -d ~/bin
       - run:
           name: Build
-          command: python tools/build.py -s cmake --toolchain clang --one-per-family << parameters.family >>
+          command: python tools/build.py -s << parameters.build-system >> --toolchain clang --one-per-family << parameters.family >>
 
 workflows:
   build:
@@ -61,5 +64,6 @@ workflows:
       - arm-clang:
           matrix:
             parameters:
+              build-system: ['cmake', 'make']
               family: ['stm32f1']
 #              family: ['imxrt', 'kinetis_k kinetis_kl kinetis_k32l2', 'lpc11 lpc13 lpc15', 'lpc17 lpc18 lpc40 lpc43', 'lpc51 lpc54 lpc55', 'nrf', 'samd11 samd21 saml2x', 'samd5x_e5x samg', 'stm32f0 stm32f1 stm32f2 stm32f3', 'stm32f4', 'stm32f7', 'stm32g0 stm32g4 stm32h5', 'stm32h7', 'stm32l4 stm32u5 stm32wb']
